--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 	<section id="about">
 		<h1>About</h1>
 		<p>
-			I wrote this library because I was fascinated by how fun and painless Go made multithreaded programming. I
+			My name is William Yin, and I wrote this library because I was fascinated by how fun and painless Go made multithreaded programming. I
 			hope that by using this library, you will find multithreaded programming in Java just as fun and painless as
 			in Go.
 		</p>
@@ -225,7 +225,7 @@
 
 <footer>
 	<div class="container">
-		<p>&copy; 2024 JavaGo. All rights reserved.</p>
+		<p>William Yin</p>
 	</div>
 </footer>
 </body>
