links go to new tab

--- a/index.html
+++ b/index.html
@@ -191,18 +191,34 @@
 	<section id="docs">
 		<h1>Documentation</h1>
 		<p>
-			Detailed documentation for this package can be found <a href="docs/index.html">here</a>.
+			Detailed documentation for this package can be found <a href="docs/index.html" target="_blank">here</a>.
 		</p>
 		<p>
-			To view the source code for this library, click <a href="https://github.com/WilliamYin2024/JavaGo">here</a>.
+			To view the source code for this library, click
+			<a href="https://github.com/WilliamYin2024/JavaGo" target="_blank">here</a>.
+		</p>
+		<p>
+			This library requires Java 21 as it makes use of virtual threads.
 		</p>
 	</section>
 
 	<section id="blog">
 		<h1>Blog</h1>
 		<p>
-			To learn how I created this library and stay up to date with anything else I create, follow my Medium blog
-			<a href="https://medium.com/@william.yin.2024">here</a>.
+			I have published a series of articles on my
+			<a href="https://medium.com/@william.yin.2024" target="_blank">Medium blog</a> documenting how I created
+			this library. A link to each part can be found below.
+		</p>
+		<ol>
+			<li>
+				<a href="https://medium.com/@william.yin.2024/implementing-go-concurrency-features-in-java-part-1-implementing-the-go-keyword-and-wait-groups-517bb3cef323" target="_blank">
+					Part 1: Implementing the Go Keyword and Wait Groups
+				</a>
+			</li>
+		</ol>
+		<p>
+			To stay up to date with anything else I create, I encourage you to follow my
+			<a href="https://medium.com/@william.yin.2024" target="_blank">Medium blog</a>.
 		</p>
 	</section>
 
