updated docs with BufferedQueueChannel IllegalArgumentException and added links to blog

--- a/index.html
+++ b/index.html
@@ -212,7 +212,22 @@
 		<ol>
 			<li>
 				<a href="https://medium.com/@william.yin.2024/implementing-go-concurrency-features-in-java-part-1-implementing-the-go-keyword-and-wait-groups-517bb3cef323" target="_blank">
-					Part 1: Implementing the Go Keyword and Wait Groups
+					Implementing the Go Keyword and Wait Groups
+				</a>
+			</li>
+			<li>
+				<a href="https://medium.com/@william.yin.2024/implementing-go-concurrency-features-in-java-part-2-implementing-the-channels-3eb4b2963f88" target="_blank">
+					Implementing Channels
+				</a>
+			</li>
+			<li>
+				<a href="https://medium.com/@william.yin.2024/implementing-go-concurrency-features-in-java-part-3-implementing-the-select-statement-feeb4afb1813" target="_blank">
+					Implementing the Select Statement
+				</a>
+			</li>
+			<li>
+				<a href="https://medium.com/@william.yin.2024/implementing-go-concurrency-features-in-java-part-4-implementing-the-sync-package-ae92520dd01b" target="_blank">
+					Implementing the Sync Package
 				</a>
 			</li>
 		</ol>
