added link to LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
         .comment { color: #6a9955; }
         .number { color: #b5cea8; }
         .tag {color: #569cd6;}
+
+		.text-link {
+			color: inherit;
+			text-decoration: none;
+		}
+		.text-link:hover { color: #569cd6; }
 	</style>
 </head>
 <body>
@@ -269,7 +275,8 @@
 	<section id="about">
 		<h1>About</h1>
 		<p>
-			My name is William Yin, and I wrote this library because I was fascinated by how fun and painless Go made multithreaded programming. I
+			My name is <a href="https://www.linkedin.com/in/williamyin2024/" class="text-link" target="_blank">William Yin</a>, and I
+			wrote this library because I was fascinated by how fun and painless Go made multithreaded programming. I
 			hope that by using this library, you will find multithreaded programming in Java just as fun and painless as
 			in Go.
 		</p>
@@ -278,7 +285,7 @@
 
 <footer>
 	<div class="container">
-		<p>William Yin</p>
+		<p><a href="https://www.linkedin.com/in/williamyin2024/" class="text-link" target="_blank">William Yin</a></p>
 	</div>
 </footer>
 </body>
